# adze-modeler

./: .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
adze_modeler/: dxf_handlers.py  femm_wrapper.py  geometry.py  gmsh.py  model.py  objects.py  svg_handlers.py
artap_segment/: objects.py
artapsegment/: dxf_handlers.py  geometry.py  objects.py  svg_handlers.py
examples/motor/: motor_geometry.dxf
examples/owl/: test.geo_unrolled  test.msh
examples/team_benchmark/: team_benchmark.py
examples/triangle/: test.geo_unrolled  test.vtk
resources/: femm42.tar.xz
test/: test_geometry.py  test_objects.py
tests/: test_dxf_handlers.py  test_femm_wrapper.py  test_geometry.py  test_objects.py  test_svg_handlers.py
tests/test_femm_execution/: coilgun.fem  coilgun.lua  test_femm_execution.py
