[metadata]
name = ADZE-Modeler
version = 0.0.1
author = Tamás Orosz
email = orosz.tamas@yahoo.com
description = SimplE GeoMetry gENeraTion for fem-based optimization
url = https://github.com/tamasorosz/artap-segment
project_urls =
    Code=https://github.com/tamasorosz/artap-segment
    Documentation=https://github.com/tamasorosz/artap-segment
    Issues=https://github.com/tamasorosz/artap-segment
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Adaptive Technologies
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Utilities
keywords =
    mesh
    gmsh
    femm
    artap
    agros2d
    mesh generation
    mathematics
    Optimization
    engineering

[options]
include_package_data=True
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.9
    svgpathtools
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
